# graphics-lab-THSS

./: .gitignore  .gitmodules  Cargo.toml  README.md  build_wasm.sh
en/: polygon_intersect_bg.wasm
particles/: 0.py  1.py  README.md  icosphere.py  playback.c  playback_utils.h  recorddiff.c  requirements.txt  sim1-spheres.py  sim2-molecules.py
pbr_rt/: Cargo.toml
pbr_rt/ibl/: irrad_negx.hdr  irrad_negy.hdr  irrad_posy.hdr  rad_negx_5_8x8.hdr  rad_negy_4_16x16.hdr  rad_negz_0_256x256.hdr  rad_negz_1_128x128.hdr  rad_negz_3_32x32.hdr  rad_negz_5_8x8.hdr  rad_posx_1_128x128.hdr  rad_posx_4_16x16.hdr  rad_posy_1_128x128.hdr  rad_posz_2_64x64.hdr  rad_posz_5_8x8.hdr  skybox_negy.hdr
pbr_rt/src/: ibl.brdf_lut.frag  ibl.rs
polygon_intersect/: egui.diff  zh-CHS.diff
polygon_intersect/fonts/: subset.sh
polygon_intersect/src/: app.rs  geom.rs  main.rs
polygon_intersect/web/: index.html
rabbit_hole/: Cargo.toml  README.md
rabbit_hole/ibl/: irrad_posx.hdr  rad_negx_4_16x16.hdr  rad_negy_0_256x256.hdr  rad_negy_1_128x128.hdr  rad_negy_2_64x64.hdr  rad_negy_3_32x32.hdr  rad_negy_5_8x8.hdr  rad_posx_5_8x8.hdr  rad_posy_3_32x32.hdr  rad_posy_4_16x16.hdr  rad_posz_4_16x16.hdr  skybox_negz.hdr  skybox_posx.hdr
rabbit_hole/src/: gl.rs  main.rs  ray_tracer.rs
ray_tracer/: Cargo.toml  README.md  test1.mtl
ray_tracer/src/: ibl.rs  (+6 more)
scene/: 1a_000001.tar.bz2  Cargo.toml  trees.blend  trees.obj.tar.bz2
simple_scene/: README.md  build.rs
src/: app.rs  geom.rs  intersect.rs  lib.rs  main.rs
web/: index.html
zh/: polygon_intersect.js  polygon_intersect_bg.wasm
(+25 files in other folders)
