cargo-features = ["edition2021"]

[package]
name = "polygon_intersect"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.14.0", default-features = false }
serde = { version = "*", optional = true }
rand = "0.8"
earcutr = "0.2.0"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "*", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
persistence = ["eframe/persistence", "serde"]
