[package]
name = "scene"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
glfw = { git = "https://github.com/bjz/glfw-rs.git" }
wavefront_obj = "10.0.0"
glm = "0.2.3"
image = "0.23.14"
relative-path = "1.5.0"
bvh = "0.6.0"
rand = "0.8.4"

[build-dependencies]
gl_generator = "0.5.0"
